[package]
name = "linkiq"
version = "0.1.0"
edition = "2021"
authors = ["Rasmus Melchior Jacobsen <rmja@laesoe.org>"]
repository = "https://github.com/rmja/linkiq"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = [
    "kamstrup",
    "linkiq",
    "openlinkiq",
]
description = """
Kamstrup OpenlinkIQ protocol.
"""

[dependencies]
bitvec = { version = "1", default-features = false, features = ["alloc"] }
crc = "2.0"
bcd-numbers = { git = "https://github.com/rmja/bcd-numbers", branch = "dev" }
num-derive = "0.3"
num-traits = { version = "0.2", default-features = false }
fastfec = { git = "https://github.com/rmja/fastfec" }
funty = { version = "2", default-features = false }

[dev-dependencies]
assert_hex = "0.2"
once_cell = "1"
rand = "0.8"
rand_chacha = "0.3"