[package]
name = "linkiq"
version = "0.1.0"
edition = "2021"
authors = ["Rasmus Melchior Jacobsen <rmja@laesoe.org>"]
repository = "https://github.com/rmja/linkiq"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = [
    "kamstrup",
    "linkiq",
    "openlinkiq",
]
description = """
Kamstrup OpenlinkIQ protocol.
"""

[features]
default = []
ctrl = ["futures-async-stream", "async-trait", "futures"]
all = ["ctrl"]

[dependencies]
async-trait = { version = "0.1", optional = true }
bcd = { git = "https://github.com/rmja/bcd" }
bitvec = { version = "1", default-features = false, features = ["alloc"] }
crc = "2.0"
fastfec = { git = "https://github.com/rmja/fastfec" }
funty = { version = "2", default-features = false }
futures = { version = "0.3.0", default-features = false, optional = true }
futures-async-stream = { version = "0.2", optional = true }
num-derive = "0.3"
num-traits = { version = "0.2", default-features = false }

[dev-dependencies]
assert_hex = "0.2"
mockall = "0.11"
once_cell = "1"
rand = "0.8"
rand_chacha = "0.3"
tokio = { version = "1", features = ["macros", "rt", "time"] }