[package]
name = "linkiq"
version = "0.1.0"
edition = "2021"
authors = ["Rasmus Melchior Jacobsen <rmja@laesoe.org>"]
repository = "https://github.com/rmja/linkiq"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["kamstrup", "linkiq", "openlinkiq"]
description = "Kamstrup OpenlinkIQ protocol"

[features]
ctrl = ["embassy-time", "futures", "futures-async-stream"]

[dependencies]
bitvec = { version = "1", default-features = false, features = ["alloc"] }
crc = "3"
embassy-time = { version = "0.2", optional = true }
fastfec = { path = "../fastfec" }
funty = { version = "2", default-features = false }
futures = { version = "0.3", default-features = false, optional = true }
futures-async-stream = { version = "0.2", optional = true }
heapless = "0.8"
num-derive = "0.4"
num-traits = { version = "0.2", default-features = false }
wmbus = { path = "../wmbus" }

[dev-dependencies]
assert_hex = "0.4"
embassy-time = { version = "0.2", features = ["std", "generic-queue"] }
critical-section = { version = "1", features = ["std"] }
mockall = "0.11"
once_cell = "1"
rand = "0.8"
rand_chacha = "0.3"
tokio = { version = "1", features = ["macros", "rt"] }
